--- a/Banking-SNAZ/Banking-SNAZ.vcxproj
+++ b/Banking-SNAZ/Banking-SNAZ.vcxproj
@@ -138,6 +138,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Account.h" />
     <ClInclude Include="BaseClass.h" />
     <ClInclude Include="Transaction.h" />
   </ItemGroup>
