--- a/Banking-SNAZ/Banking-SNAZ.vcxproj
+++ b/Banking-SNAZ/Banking-SNAZ.vcxproj
@@ -143,6 +143,7 @@
     <ClInclude Include="Transaction.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Account.cpp" />
     <ClCompile Include="Source.cpp" />
     <ClCompile Include="Transaction.cpp" />
   </ItemGroup>
