Added Checking.cpp&.h, and Cls.cpp&.h Also made minor changes to Transaction.cpp&.h

--- a/Banking-SNAZ/Banking-SNAZ.vcxproj
+++ b/Banking-SNAZ/Banking-SNAZ.vcxproj
@@ -140,10 +140,14 @@
   <ItemGroup>
     <ClInclude Include="Account.h" />
     <ClInclude Include="BaseClass.h" />
+    <ClInclude Include="Checking.h" />
+    <ClInclude Include="Cls.h" />
     <ClInclude Include="Transaction.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Account.cpp" />
+    <ClCompile Include="Checking.cpp" />
+    <ClCompile Include="Cls.cpp" />
     <ClCompile Include="Source.cpp" />
     <ClCompile Include="Transaction.cpp" />
   </ItemGroup>
