Made Base class atributes protected rather than private, and added to Heloc class.

--- a/Banking-SNAZ/Banking-SNAZ.vcxproj
+++ b/Banking-SNAZ/Banking-SNAZ.vcxproj
@@ -150,6 +150,7 @@
     <ClCompile Include="BaseClass.cpp" />
     <ClCompile Include="Checking.cpp" />
     <ClCompile Include="Cls.cpp" />
+    <ClCompile Include="Heloc.cpp" />
     <ClCompile Include="Source.cpp" />
     <ClCompile Include="Transaction.cpp" />
   </ItemGroup>
