--- a/Banking-SNAZ/Banking-SNAZ.vcxproj
+++ b/Banking-SNAZ/Banking-SNAZ.vcxproj
@@ -144,6 +144,7 @@
     <ClInclude Include="Checking.h" />
     <ClInclude Include="Cls.h" />
     <ClInclude Include="Heloc.h" />
+    <ClInclude Include="Saving.h" />
     <ClInclude Include="Transaction.h" />
     <ClInclude Include="TransactionStorage.h" />
   </ItemGroup>
@@ -154,6 +155,7 @@
     <ClCompile Include="Checking.cpp" />
     <ClCompile Include="Cls.cpp" />
     <ClCompile Include="Heloc.cpp" />
+    <ClCompile Include="Saving.cpp" />
     <ClCompile Include="Source.cpp" />
     <ClCompile Include="Transaction.cpp" />
     <ClCompile Include="TransactionStorage.cpp" />
